Spacing issues fixed

--- a/css/header.css
+++ b/css/header.css
@@ -27,3 +27,7 @@
 .custom-yellow-background:hover{
     background: rgba(239,150,12,0.8);
 }
+
+.header{
+    min-height: 100vh;
+}
