--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body{
     background: #ffffff;
 }
 .heading{
-    color:rgb(239,150,12); font-weight: 100; padding-top: 50px; padding-bottom: 100px; text-shadow:6px #000;
+    color:rgb(239,150,12); font-weight: 100; padding-top: 0px; padding-bottom: 100px; text-shadow:6px #000;
 }
 
 .register-button{
